--- a/src/main/webapp/css/perfilAluno.css
+++ b/src/main/webapp/css/perfilAluno.css
@@ -1,5 +1,5 @@
 /*Responsivo nos seguintes dispositivos: google chrome, tablets (paisagem e retrato), smartphone*/
-@media screen and (max-width: 1080px), (max-width: 1920px)
+@media screen and (max-width:100em), (max-width: 1080px), (max-width: 1920px)
 {
     body
     {
@@ -7,17 +7,16 @@
         margin: 0px;
     }
 
-    nav
+    .menuHome
     {
-        margin: 0px;
-        padding: 3px;
-        color: white;
-        background: #AE57FF;
+        font-weight: bold;
+        font-family: serif;
+        font-size: 14pt;
     }
-
+    
     #sub_menu, .menuProfile, .menuExit
     {
-        font-size: 16pt;
+        font-size: 14pt;
         margin: 0px;
         padding: 3px;
         color: white;
@@ -25,11 +24,6 @@
         font-weight: bold;
         font-family: serif;
         border: none;
-    }
-
-    .menuProfile
-    {
-        margin-right: 18px;
     }
 
     a:link, a:visited, a:active
@@ -53,6 +47,7 @@
     {
         float: left;
         height: 30px; 
+        margin-top: 7em;
     }
 
     .generalStudent
@@ -65,6 +60,7 @@
     {
         width: 100px;
         height: 100px;
+        margin-top: 7em;
     }
 
     textarea
@@ -108,24 +104,5 @@
     {
         padding: 8px;
         border-radius: 5px;
-    }
-
-
-}
-
-@media screen and (max-width: 100em)
-{
-    .menuHome
-    {
-        font-weight: bold;
-        font-family: serif;
-        font-size: 22pt;
-        text-align: center;
-        margin-right: 7em;
-    }
-    
-    .menuProfile
-    {
-        margin-right: 10px;
     }
 }
